MULE-12937: Artifacts using heavy package must should not depend on maven for classloader model resolution

--- a/modules/deployment-model-impl/pom.xml
+++ b/modules/deployment-model-impl/pom.xml
@@ -111,6 +111,11 @@
             <version>${aetherProviderVersion}</version>
         </dependency>
         <dependency>
+            <groupId>org.mule.tools.maven</groupId>
+            <artifactId>mule-packager</artifactId>
+        </dependency>
+        
+        <dependency>
             <groupId>org.mule.runtime</groupId>
             <artifactId>mule-module-spring-config</artifactId>
             <version>${project.version}</version>
