--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,7 @@
         <muleMavenClientApi>1.0.0-SNAPSHOT</muleMavenClientApi>
         <muleMavenClientImpl>1.0.0-SNAPSHOT</muleMavenClientImpl>
         <muleMavenClientTest>1.0.0-SNAPSHOT</muleMavenClientTest>
+        <mule-packager-version>3.0.0-SNAPSHOT</mule-packager-version>
         <mulePolicyApiVersion>1.0.0-SNAPSHOT</mulePolicyApiVersion>
         <multithreadedtcVersion>1.01</multithreadedtcVersion>
         <muleApiVersion>1.0.0-SNAPSHOT</muleApiVersion>
@@ -1396,6 +1397,11 @@
                 <groupId>org.powermock</groupId>
                 <artifactId>powermock-module-junit4</artifactId>
                 <version>${powermockVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mule.tools.maven</groupId>
+                <artifactId>mule-packager</artifactId>
+                <version>${mule-packager-version}</version>
             </dependency>
         </dependencies>
 
